readme editted to fix requirements.txt cmd, body overflow to auto

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,5 +54,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: scroll;
+  overflow: auto;
 }
